vector/DEV/opensearch/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch
spec:
  serviceName: opensearch-headless
  template:
    spec:
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: opensearch
              containerPort: 9200
              procotol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 9200
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 9200
            initialDelaySeconds: 30
            periodSeconds: 10
