vector/DEV/opensearch/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-headless
spec:
  clusterIP: None
  ports:
    - name: opensearch
      port: 9200
      protocol: TCP
      targetPort: 9200
