vector/DEV/opensearch/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: opensearch.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch
                port:
                  number: 9200
